# SpringData2026

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini   docker-compose.yaml  docker-compose.yml  main.py  requirements.txt  run.py  run_buffer_coverage_check.py  test_lib.py
core/: processing.py
migrations/: env.py
migrations/versions/: 001_create_territories_metrics.py  002_add_description_to_territories.py  003_add_unique_constraint_to_territory_metrics.py
spatial_lib/: README.md  pyproject.toml
spatial_lib/src/spatial_lib/: __init__.py  geometry.py
spatial_lib/tests/: test_analysis.py
src/buffer_coverage/: __init__.py  exceptions.py
src/buffer_coverage/core/: analysis.py  geometry.py
src/buffer_coverage/services/: analysis.py
src/buffer_coverage/utils/: validators.py
src/lab5_app/: config.py  main.py
src/lab5_app/routes/: config.py
src/lab5_app/services/: runtime_config.py
src/lab6_app/: dependencies.py  exceptions.py  init_dependencies.py  main.py  territories_models.py
src/lab6_app/common/: config.py  db.py
src/lab6_app/routes/: analysis.py  config.py  territories.py
src/lab6_app/schemas/: app_config.py  responses.py  runtime_config.py  territories.py
src/lab6_app/services/: geo_analysis_service.py  runtime_config_service.py  territory_service.py
