[tool.poetry]
name = "spatial-lib"
version = "0.1.0"
description = "Library for processing urban spatial data"
authors = ["Ratmanova Viktoriia <vikaratmanova@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.15"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"